@@ -6,13 +6,20 @@ import org.example.tackit.domain.QnA_board.QnA_post.repository.QnAMemberReposito
 import org.example.tackit.domain.QnA_board.QnA_post.repository.QnAPostRepository;
 import org.example.tackit.domain.QnA_board.QnA_tag.repository.QnAPostTagMapRepository;
 import org.example.tackit.domain.entity.Member;
+import org.example.tackit.domain.entity.QnAComment;
+import org.example.tackit.domain.entity.QnAPost;
 import org.example.tackit.domain.entity.Status;
 import org.example.tackit.domain.mypage.dto.response.QnAMyCommentResponseDto;
 import org.example.tackit.domain.mypage.dto.response.QnAMyPostResponseDto;
+import org.example.tackit.global.dto.PageResponseDTO;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,44 +31,37 @@ public class MyPageQnAService {
 
     // 질문게시판) 내가 쓴 게시글 조회
     @Transactional(readOnly = true)
-    public List<QnAMyPostResponseDto> getMyPosts(String email) {
+    public PageResponseDTO<QnAMyPostResponseDto> getMyPosts(String email, Pageable pageable) {
         Member member = qnAMemberRepository.findByEmail(email)
                 .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자입니다."));
 
-        return qnAPostRepository.findByWriter(member).stream()
-                .filter(post -> post.getStatus() == Status.ACTIVE)
-                .map(post -> {
-                    List<String> tags = qnAPostTagMapRepository.findByQnaPost(post).stream()
-                            .map(mapping -> mapping.getTag().getTagName())
-                            .toList();
-                    return QnAMyPostResponseDto.builder()
-                            .postId(post.getId())
-                            .title(post.getTitle())
-                            .content(post.getContent())
-                            .createdAt(post.getCreatedAt())
-                            .tags(tags)
-                            .type(post.getType())
-                            .build();
-                }).toList();
+        Page<QnAPost> postPage = qnAPostRepository.findByWriterAndStatus(member, Status.ACTIVE, pageable);
+        List<QnAPost> posts = postPage.getContent();
+
+        // 태그 일괄 조회 (N+1 방지)
+        Map<Long, List<String>> tagMap = qnAPostTagMapRepository.findByQnaPostIn(posts).stream()
+                .collect(Collectors.groupingBy(
+                        mapping -> mapping.getQnaPost().getId(),
+                        Collectors.mapping(mapping -> mapping.getTag().getTagName(), Collectors.toList())
+                ));
+
+        return PageResponseDTO.from(postPage, post ->
+                QnAMyPostResponseDto.fromEntity(post, tagMap.getOrDefault(post.getId(), List.of()))
+        );
     }
 
 
     // 질문게시판) 내가 쓴 댓글 조회
     @Transactional(readOnly = true)
-    public List<QnAMyCommentResponseDto> getMyComments(String email) {
+    public PageResponseDTO<QnAMyCommentResponseDto> getMyComments(String email, Pageable pageable) {
         Member member = qnAMemberRepository.findByEmail(email)
                 .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자입니다."));
 
-        return qnACommentRepository.findByWriter(member).stream()
-                .map(comment -> QnAMyCommentResponseDto.builder()
-                        .commentId(comment.getId())
-                        .postId(comment.getQnAPost().getId())
-                        .content(comment.getContent())
-                        .createdAt(comment.getCreatedAt())
-                        .type(comment.getQnAPost().getType())
-                        .build())
-                .toList();
+        Page<QnAComment> commentPage = qnACommentRepository.findByWriter(member, pageable);
+
+        return PageResponseDTO.from(commentPage, QnAMyCommentResponseDto::fromEntity);
     }
+
 
 
 }
